still didn't figure out bwi

--- a/VersionAnalysis4A.ipynb
+++ b/VersionAnalysis4A.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +151,9 @@
        "      <th>Cool [kWh]_92</th>\n",
        "      <th>Fan [kWh]_92</th>\n",
        "      <th>...</th>\n",
+       "      <th>Cooling [kBtu]_95</th>\n",
+       "      <th>Fan [kBtu]_95</th>\n",
+       "      <th>Heat [kWh]_95</th>\n",
        "      <th>Cool [kWh]_95</th>\n",
        "      <th>Fan [kWh]_95</th>\n",
        "      <th>U</th>\n",
@@ -158,9 +161,6 @@
        "      <th>Heat%Diff</th>\n",
        "      <th>Cool%Diff</th>\n",
        "      <th>Fan%Diff</th>\n",
-       "      <th>HeatingPercentDifference</th>\n",
-       "      <th>CoolingPercentDifference</th>\n",
-       "      <th>FanPercentDifference</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -177,13 +177,13 @@
        "      <td>4127.99000</td>\n",
        "      <td>968.94000</td>\n",
        "      <td>...</td>\n",
+       "      <td>14406.00</td>\n",
+       "      <td>3368.00</td>\n",
+       "      <td>7316.61000</td>\n",
        "      <td>4221.03000</td>\n",
        "      <td>986.70000</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.10</td>\n",
-       "      <td>-0.987312</td>\n",
-       "      <td>2.249982</td>\n",
-       "      <td>1.844572</td>\n",
        "      <td>-0.987312</td>\n",
        "      <td>2.249982</td>\n",
        "      <td>1.844572</td>\n",
@@ -201,13 +201,13 @@
        "      <td>4739.98000</td>\n",
        "      <td>1112.81000</td>\n",
        "      <td>...</td>\n",
+       "      <td>16518.00</td>\n",
+       "      <td>3867.00</td>\n",
+       "      <td>6870.68000</td>\n",
        "      <td>4839.71000</td>\n",
        "      <td>1133.11000</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>-0.820539</td>\n",
-       "      <td>2.107931</td>\n",
-       "      <td>1.816746</td>\n",
        "      <td>-0.820539</td>\n",
        "      <td>2.107931</td>\n",
        "      <td>1.816746</td>\n",
@@ -225,13 +225,13 @@
        "      <td>5181.25000</td>\n",
        "      <td>1223.82000</td>\n",
        "      <td>...</td>\n",
+       "      <td>18593.00</td>\n",
+       "      <td>4366.00</td>\n",
+       "      <td>6523.36000</td>\n",
        "      <td>5447.70000</td>\n",
        "      <td>1279.16000</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.40</td>\n",
-       "      <td>-1.955258</td>\n",
-       "      <td>5.146186</td>\n",
-       "      <td>4.524779</td>\n",
        "      <td>-1.955258</td>\n",
        "      <td>5.146186</td>\n",
        "      <td>4.524779</td>\n",
@@ -249,13 +249,13 @@
        "      <td>5757.74000</td>\n",
        "      <td>1364.15000</td>\n",
        "      <td>...</td>\n",
+       "      <td>20746.00</td>\n",
+       "      <td>4889.00</td>\n",
+       "      <td>6235.11000</td>\n",
        "      <td>6078.66000</td>\n",
        "      <td>1432.36000</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.55</td>\n",
-       "      <td>-1.985169</td>\n",
-       "      <td>5.572236</td>\n",
-       "      <td>5.004296</td>\n",
        "      <td>-1.985169</td>\n",
        "      <td>5.572236</td>\n",
        "      <td>5.004296</td>\n",
@@ -273,13 +273,13 @@
        "      <td>6508.37000</td>\n",
        "      <td>1542.50000</td>\n",
        "      <td>...</td>\n",
+       "      <td>22843.00</td>\n",
+       "      <td>5404.00</td>\n",
+       "      <td>6005.09000</td>\n",
        "      <td>6692.96000</td>\n",
        "      <td>1583.38000</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.70</td>\n",
-       "      <td>-0.908959</td>\n",
-       "      <td>2.836177</td>\n",
-       "      <td>2.659574</td>\n",
        "      <td>-0.908959</td>\n",
        "      <td>2.836177</td>\n",
        "      <td>2.659574</td>\n",
@@ -321,13 +321,13 @@
        "      <td>1823.66716</td>\n",
        "      <td>768.06727</td>\n",
        "      <td>...</td>\n",
+       "      <td>6415.70</td>\n",
+       "      <td>2710.70</td>\n",
+       "      <td>18459.95225</td>\n",
        "      <td>1879.80010</td>\n",
        "      <td>794.23510</td>\n",
        "      <td>1.1</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>7.432386</td>\n",
-       "      <td>3.078025</td>\n",
-       "      <td>3.406971</td>\n",
        "      <td>7.432386</td>\n",
        "      <td>3.078025</td>\n",
        "      <td>3.406971</td>\n",
@@ -345,13 +345,13 @@
        "      <td>2220.72318</td>\n",
        "      <td>897.27148</td>\n",
        "      <td>...</td>\n",
+       "      <td>7657.70</td>\n",
+       "      <td>3129.42</td>\n",
+       "      <td>17358.93736</td>\n",
        "      <td>2243.70610</td>\n",
        "      <td>916.92006</td>\n",
        "      <td>1.1</td>\n",
        "      <td>0.40</td>\n",
-       "      <td>8.415093</td>\n",
-       "      <td>1.034930</td>\n",
-       "      <td>2.189814</td>\n",
        "      <td>8.415093</td>\n",
        "      <td>1.034930</td>\n",
        "      <td>2.189814</td>\n",
@@ -369,13 +369,13 @@
        "      <td>2685.24831</td>\n",
        "      <td>1039.99764</td>\n",
        "      <td>...</td>\n",
+       "      <td>8520.35</td>\n",
+       "      <td>3402.48</td>\n",
+       "      <td>16631.41543</td>\n",
        "      <td>2496.46255</td>\n",
        "      <td>996.92664</td>\n",
        "      <td>1.1</td>\n",
        "      <td>0.55</td>\n",
-       "      <td>11.027392</td>\n",
-       "      <td>-7.030477</td>\n",
-       "      <td>-4.141452</td>\n",
        "      <td>11.027392</td>\n",
        "      <td>-7.030477</td>\n",
        "      <td>-4.141452</td>\n",
@@ -393,13 +393,13 @@
        "      <td>3082.45083</td>\n",
        "      <td>1160.78982</td>\n",
        "      <td>...</td>\n",
+       "      <td>9085.33</td>\n",
+       "      <td>3503.36</td>\n",
+       "      <td>16229.59816</td>\n",
        "      <td>2662.00169</td>\n",
        "      <td>1026.48448</td>\n",
        "      <td>1.1</td>\n",
        "      <td>0.70</td>\n",
-       "      <td>13.972583</td>\n",
-       "      <td>-13.640092</td>\n",
-       "      <td>-11.570169</td>\n",
        "      <td>13.972583</td>\n",
        "      <td>-13.640092</td>\n",
        "      <td>-11.570169</td>\n",
@@ -417,6 +417,9 @@
        "      <td>3531.86595</td>\n",
        "      <td>1297.09049</td>\n",
        "      <td>...</td>\n",
+       "      <td>9751.43</td>\n",
+       "      <td>3729.65</td>\n",
+       "      <td>15943.97004</td>\n",
        "      <td>2857.16899</td>\n",
        "      <td>1092.78745</td>\n",
        "      <td>1.1</td>\n",
@@ -424,13 +427,10 @@
        "      <td>16.983452</td>\n",
        "      <td>-19.103130</td>\n",
        "      <td>-15.750870</td>\n",
-       "      <td>16.983452</td>\n",
-       "      <td>-19.103130</td>\n",
-       "      <td>-15.750870</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>648 rows × 24 columns</p>\n",
+       "<p>648 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -460,49 +460,49 @@
        "646           48600.39           10520.31        3961.74    14239.91427   \n",
        "647           46516.22           12054.15        4426.93    13629.25246   \n",
        "\n",
-       "     Cool [kWh]_92  Fan [kWh]_92  ...  Cool [kWh]_95  Fan [kWh]_95    U  SHGC  \\\n",
-       "0       4127.99000     968.94000  ...     4221.03000     986.70000  0.1  0.10   \n",
-       "1       4739.98000    1112.81000  ...     4839.71000    1133.11000  0.1  0.25   \n",
-       "2       5181.25000    1223.82000  ...     5447.70000    1279.16000  0.1  0.40   \n",
-       "3       5757.74000    1364.15000  ...     6078.66000    1432.36000  0.1  0.55   \n",
-       "4       6508.37000    1542.50000  ...     6692.96000    1583.38000  0.1  0.70   \n",
-       "..             ...           ...  ...            ...           ...  ...   ...   \n",
-       "643     1823.66716     768.06727  ...     1879.80010     794.23510  1.1  0.25   \n",
-       "644     2220.72318     897.27148  ...     2243.70610     916.92006  1.1  0.40   \n",
-       "645     2685.24831    1039.99764  ...     2496.46255     996.92664  1.1  0.55   \n",
-       "646     3082.45083    1160.78982  ...     2662.00169    1026.48448  1.1  0.70   \n",
-       "647     3531.86595    1297.09049  ...     2857.16899    1092.78745  1.1  0.85   \n",
+       "     Cool [kWh]_92  Fan [kWh]_92  ...  Cooling [kBtu]_95  Fan [kBtu]_95  \\\n",
+       "0       4127.99000     968.94000  ...           14406.00        3368.00   \n",
+       "1       4739.98000    1112.81000  ...           16518.00        3867.00   \n",
+       "2       5181.25000    1223.82000  ...           18593.00        4366.00   \n",
+       "3       5757.74000    1364.15000  ...           20746.00        4889.00   \n",
+       "4       6508.37000    1542.50000  ...           22843.00        5404.00   \n",
+       "..             ...           ...  ...                ...            ...   \n",
+       "643     1823.66716     768.06727  ...            6415.70        2710.70   \n",
+       "644     2220.72318     897.27148  ...            7657.70        3129.42   \n",
+       "645     2685.24831    1039.99764  ...            8520.35        3402.48   \n",
+       "646     3082.45083    1160.78982  ...            9085.33        3503.36   \n",
+       "647     3531.86595    1297.09049  ...            9751.43        3729.65   \n",
        "\n",
-       "     Heat%Diff  Cool%Diff   Fan%Diff  HeatingPercentDifference  \\\n",
-       "0    -0.987312   2.249982   1.844572                 -0.987312   \n",
-       "1    -0.820539   2.107931   1.816746                 -0.820539   \n",
-       "2    -1.955258   5.146186   4.524779                 -1.955258   \n",
-       "3    -1.985169   5.572236   5.004296                 -1.985169   \n",
-       "4    -0.908959   2.836177   2.659574                 -0.908959   \n",
-       "..         ...        ...        ...                       ...   \n",
-       "643   7.432386   3.078025   3.406971                  7.432386   \n",
-       "644   8.415093   1.034930   2.189814                  8.415093   \n",
-       "645  11.027392  -7.030477  -4.141452                 11.027392   \n",
-       "646  13.972583 -13.640092 -11.570169                 13.972583   \n",
-       "647  16.983452 -19.103130 -15.750870                 16.983452   \n",
+       "     Heat [kWh]_95  Cool [kWh]_95  Fan [kWh]_95    U  SHGC  Heat%Diff  \\\n",
+       "0       7316.61000     4221.03000     986.70000  0.1  0.10  -0.987312   \n",
+       "1       6870.68000     4839.71000    1133.11000  0.1  0.25  -0.820539   \n",
+       "2       6523.36000     5447.70000    1279.16000  0.1  0.40  -1.955258   \n",
+       "3       6235.11000     6078.66000    1432.36000  0.1  0.55  -1.985169   \n",
+       "4       6005.09000     6692.96000    1583.38000  0.1  0.70  -0.908959   \n",
+       "..             ...            ...           ...  ...   ...        ...   \n",
+       "643    18459.95225     1879.80010     794.23510  1.1  0.25   7.432386   \n",
+       "644    17358.93736     2243.70610     916.92006  1.1  0.40   8.415093   \n",
+       "645    16631.41543     2496.46255     996.92664  1.1  0.55  11.027392   \n",
+       "646    16229.59816     2662.00169    1026.48448  1.1  0.70  13.972583   \n",
+       "647    15943.97004     2857.16899    1092.78745  1.1  0.85  16.983452   \n",
        "\n",
-       "     CoolingPercentDifference  FanPercentDifference  \n",
-       "0                    2.249982              1.844572  \n",
-       "1                    2.107931              1.816746  \n",
-       "2                    5.146186              4.524779  \n",
-       "3                    5.572236              5.004296  \n",
-       "4                    2.836177              2.659574  \n",
-       "..                        ...                   ...  \n",
-       "643                  3.078025              3.406971  \n",
-       "644                  1.034930              2.189814  \n",
-       "645                 -7.030477             -4.141452  \n",
-       "646                -13.640092            -11.570169  \n",
-       "647                -19.103130            -15.750870  \n",
+       "     Cool%Diff   Fan%Diff  \n",
+       "0     2.249982   1.844572  \n",
+       "1     2.107931   1.816746  \n",
+       "2     5.146186   4.524779  \n",
+       "3     5.572236   5.004296  \n",
+       "4     2.836177   2.659574  \n",
+       "..         ...        ...  \n",
+       "643   3.078025   3.406971  \n",
+       "644   1.034930   2.189814  \n",
+       "645  -7.030477  -4.141452  \n",
+       "646 -13.640092 -11.570169  \n",
+       "647 -19.103130 -15.750870  \n",
        "\n",
-       "[648 rows x 24 columns]"
+       "[648 rows x 21 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "[1296 rows x 24 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
