--- a/VersionAnalysisDemand.ipynb
+++ b/VersionAnalysisDemand.ipynb
@@ -877,434 +877,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Run</th>\n",
-       "      <th>Heating [kBtuh]_92</th>\n",
-       "      <th>Cooling [kBtuh]_92</th>\n",
-       "      <th>Fan [kBtuh]_92</th>\n",
-       "      <th>Heat [kW]_92</th>\n",
-       "      <th>Cool [kW]_92</th>\n",
-       "      <th>Fan [kW]_92</th>\n",
-       "      <th>Demand [kW]_92</th>\n",
-       "      <th>Heating [kBtuh]_95</th>\n",
-       "      <th>Cooling [kBtuh]_95</th>\n",
-       "      <th>Fan [kBtuh]_95</th>\n",
-       "      <th>Heat [kW]_95</th>\n",
-       "      <th>Cool [kW]_95</th>\n",
-       "      <th>Fan [kW]_95</th>\n",
-       "      <th>Demand [kW]_95</th>\n",
-       "      <th>U</th>\n",
-       "      <th>SHGC</th>\n",
-       "      <th>Demand%Diff</th>\n",
-       "      <th>DemandPercentDifference</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Climate</th>\n",
-       "      <th>System</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2A</th>\n",
-       "      <th>Elec</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>28.617870</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.596944</td>\n",
-       "      <td>8.395463</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.469340</td>\n",
-       "      <td>8.864803</td>\n",
-       "      <td>28.618796</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.609167</td>\n",
-       "      <td>8.395833</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.474588</td>\n",
-       "      <td>8.870421</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.070076</td>\n",
-       "      <td>0.070076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>10.287315</td>\n",
-       "      <td>1.663333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3.009907</td>\n",
-       "      <td>0.489292</td>\n",
-       "      <td>3.499199</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>10.349352</td>\n",
-       "      <td>1.682685</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3.032593</td>\n",
-       "      <td>0.493545</td>\n",
-       "      <td>3.526138</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.870179</td>\n",
-       "      <td>0.870179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">3A</th>\n",
-       "      <th>Elec</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>37.423704</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.535278</td>\n",
-       "      <td>10.965833</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.449836</td>\n",
-       "      <td>11.415670</td>\n",
-       "      <td>37.416667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.553148</td>\n",
-       "      <td>10.963333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.455072</td>\n",
-       "      <td>11.418406</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.016769</td>\n",
-       "      <td>0.016769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>9.206574</td>\n",
-       "      <td>1.519074</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.697222</td>\n",
-       "      <td>0.445089</td>\n",
-       "      <td>3.142311</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>9.284352</td>\n",
-       "      <td>1.533333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.717593</td>\n",
-       "      <td>0.449267</td>\n",
-       "      <td>3.166859</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.984144</td>\n",
-       "      <td>0.984144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">4A</th>\n",
-       "      <th>Elec</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>39.698519</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.409352</td>\n",
-       "      <td>11.632778</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.412940</td>\n",
-       "      <td>12.045718</td>\n",
-       "      <td>39.684722</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.428056</td>\n",
-       "      <td>11.628611</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.418420</td>\n",
-       "      <td>12.047031</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>-0.021595</td>\n",
-       "      <td>-0.021595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.540093</td>\n",
-       "      <td>1.484444</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>0.434942</td>\n",
-       "      <td>2.934942</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.625741</td>\n",
-       "      <td>1.498796</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.527914</td>\n",
-       "      <td>0.439147</td>\n",
-       "      <td>2.967061</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>1.295594</td>\n",
-       "      <td>1.295594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">5A</th>\n",
-       "      <th>Elec</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>54.138241</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.898704</td>\n",
-       "      <td>15.862407</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.556320</td>\n",
-       "      <td>16.418728</td>\n",
-       "      <td>54.126667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.911944</td>\n",
-       "      <td>15.859537</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.560200</td>\n",
-       "      <td>16.419737</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.004341</td>\n",
-       "      <td>0.004341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.607315</td>\n",
-       "      <td>1.894907</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.522222</td>\n",
-       "      <td>0.555208</td>\n",
-       "      <td>3.077430</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.705370</td>\n",
-       "      <td>1.915648</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.550000</td>\n",
-       "      <td>0.561285</td>\n",
-       "      <td>3.111285</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>1.263387</td>\n",
-       "      <td>1.263387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">6A</th>\n",
-       "      <th>Elec</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>55.506481</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.806944</td>\n",
-       "      <td>16.262963</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.529435</td>\n",
-       "      <td>16.792398</td>\n",
-       "      <td>55.490741</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.816944</td>\n",
-       "      <td>16.258426</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.532365</td>\n",
-       "      <td>16.790791</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>-0.010554</td>\n",
-       "      <td>-0.010554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.076204</td>\n",
-       "      <td>1.870000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.366667</td>\n",
-       "      <td>0.547910</td>\n",
-       "      <td>2.914577</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.146852</td>\n",
-       "      <td>1.884352</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.387963</td>\n",
-       "      <td>0.552115</td>\n",
-       "      <td>2.940078</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>1.039523</td>\n",
-       "      <td>1.039523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">7</th>\n",
-       "      <th>Elec</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>64.190463</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.003981</td>\n",
-       "      <td>18.807130</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.587167</td>\n",
-       "      <td>19.394296</td>\n",
-       "      <td>64.188704</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.005463</td>\n",
-       "      <td>18.806759</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.587601</td>\n",
-       "      <td>19.394360</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.000517</td>\n",
-       "      <td>0.000517</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gas</th>\n",
-       "      <td>18.5</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7.147963</td>\n",
-       "      <td>1.805926</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.092593</td>\n",
-       "      <td>0.529136</td>\n",
-       "      <td>2.621729</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7.225741</td>\n",
-       "      <td>1.824907</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.113889</td>\n",
-       "      <td>0.534698</td>\n",
-       "      <td>2.648587</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>1.190810</td>\n",
-       "      <td>1.190810</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Run  Heating [kBtuh]_92  Cooling [kBtuh]_92  Fan [kBtuh]_92  \\\n",
-       "Climate System                                                                 \n",
-       "2A      Elec    18.5           28.617870            0.000000        1.596944   \n",
-       "        Gas     18.5            0.000000           10.287315        1.663333   \n",
-       "3A      Elec    18.5           37.423704            0.000000        1.535278   \n",
-       "        Gas     18.5            0.000000            9.206574        1.519074   \n",
-       "4A      Elec    18.5           39.698519            0.000000        1.409352   \n",
-       "        Gas     18.5            0.000000            8.540093        1.484444   \n",
-       "5A      Elec    18.5           54.138241            0.000000        1.898704   \n",
-       "        Gas     18.5            0.000000            8.607315        1.894907   \n",
-       "6A      Elec    18.5           55.506481            0.000000        1.806944   \n",
-       "        Gas     18.5            0.000000            8.076204        1.870000   \n",
-       "7       Elec    18.5           64.190463            0.000000        2.003981   \n",
-       "        Gas     18.5            0.000000            7.147963        1.805926   \n",
-       "\n",
-       "                Heat [kW]_92  Cool [kW]_92  Fan [kW]_92  Demand [kW]_92  \\\n",
-       "Climate System                                                            \n",
-       "2A      Elec        8.395463      0.000000     0.469340        8.864803   \n",
-       "        Gas         0.000000      3.009907     0.489292        3.499199   \n",
-       "3A      Elec       10.965833      0.000000     0.449836       11.415670   \n",
-       "        Gas         0.000000      2.697222     0.445089        3.142311   \n",
-       "4A      Elec       11.632778      0.000000     0.412940       12.045718   \n",
-       "        Gas         0.000000      2.500000     0.434942        2.934942   \n",
-       "5A      Elec       15.862407      0.000000     0.556320       16.418728   \n",
-       "        Gas         0.000000      2.522222     0.555208        3.077430   \n",
-       "6A      Elec       16.262963      0.000000     0.529435       16.792398   \n",
-       "        Gas         0.000000      2.366667     0.547910        2.914577   \n",
-       "7       Elec       18.807130      0.000000     0.587167       19.394296   \n",
-       "        Gas         0.000000      2.092593     0.529136        2.621729   \n",
-       "\n",
-       "                Heating [kBtuh]_95  Cooling [kBtuh]_95  Fan [kBtuh]_95  \\\n",
-       "Climate System                                                           \n",
-       "2A      Elec             28.618796            0.000000        1.609167   \n",
-       "        Gas               0.000000           10.349352        1.682685   \n",
-       "3A      Elec             37.416667            0.000000        1.553148   \n",
-       "        Gas               0.000000            9.284352        1.533333   \n",
-       "4A      Elec             39.684722            0.000000        1.428056   \n",
-       "        Gas               0.000000            8.625741        1.498796   \n",
-       "5A      Elec             54.126667            0.000000        1.911944   \n",
-       "        Gas               0.000000            8.705370        1.915648   \n",
-       "6A      Elec             55.490741            0.000000        1.816944   \n",
-       "        Gas               0.000000            8.146852        1.884352   \n",
-       "7       Elec             64.188704            0.000000        2.005463   \n",
-       "        Gas               0.000000            7.225741        1.824907   \n",
-       "\n",
-       "                Heat [kW]_95  Cool [kW]_95  Fan [kW]_95  Demand [kW]_95    U  \\\n",
-       "Climate System                                                                 \n",
-       "2A      Elec        8.395833      0.000000     0.474588        8.870421  0.6   \n",
-       "        Gas         0.000000      3.032593     0.493545        3.526138  0.6   \n",
-       "3A      Elec       10.963333      0.000000     0.455072       11.418406  0.6   \n",
-       "        Gas         0.000000      2.717593     0.449267        3.166859  0.6   \n",
-       "4A      Elec       11.628611      0.000000     0.418420       12.047031  0.6   \n",
-       "        Gas         0.000000      2.527914     0.439147        2.967061  0.6   \n",
-       "5A      Elec       15.859537      0.000000     0.560200       16.419737  0.6   \n",
-       "        Gas         0.000000      2.550000     0.561285        3.111285  0.6   \n",
-       "6A      Elec       16.258426      0.000000     0.532365       16.790791  0.6   \n",
-       "        Gas         0.000000      2.387963     0.552115        2.940078  0.6   \n",
-       "7       Elec       18.806759      0.000000     0.587601       19.394360  0.6   \n",
-       "        Gas         0.000000      2.113889     0.534698        2.648587  0.6   \n",
-       "\n",
-       "                 SHGC  Demand%Diff  DemandPercentDifference  \n",
-       "Climate System                                               \n",
-       "2A      Elec    0.475     0.070076                 0.070076  \n",
-       "        Gas     0.475     0.870179                 0.870179  \n",
-       "3A      Elec    0.475     0.016769                 0.016769  \n",
-       "        Gas     0.475     0.984144                 0.984144  \n",
-       "4A      Elec    0.475    -0.021595                -0.021595  \n",
-       "        Gas     0.475     1.295594                 1.295594  \n",
-       "5A      Elec    0.475     0.004341                 0.004341  \n",
-       "        Gas     0.475     1.263387                 1.263387  \n",
-       "6A      Elec    0.475    -0.010554                -0.010554  \n",
-       "        Gas     0.475     1.039523                 1.039523  \n",
-       "7       Elec    0.475     0.000517                 0.000517  \n",
-       "        Gas     0.475     1.190810                 1.190810  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "demandAll_group= demandAll.groupby([\"Climate\", \"System\"])\n",
     "\n",
-    "demandAll_group.mean()"
+    "demandAll_group.mean()\n",
+    "\n",
+    "demandAll_group.mean().to_csv(\"data/grouped_demand.csv\")"
    ]
   }
  ],
